sfSandBoxCode/force-app/main/default/objects/Employee_Union__c/Employee_Union__c.object-meta.xml
<CustomObject>
    <description>Employee Union Info</description>
    <label>Employee Union Info</label>
    <nameField>
        <displayFormat>EUI-{0000000}</displayFormat>
        <label>Employee Union Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Union Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>