sfSandBoxCode/force-app/main/default/objects/Employee_Union__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments</description>
    <inlineHelpText>Comments</inlineHelpText>
    <label>Comments</label>
    <length>200</length>
    <type>Text</type>
</CustomField>