sfSandBoxCode/force-app/main/default/objects/Employee_Union__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee Record</description>
    <inlineHelpText>Employee Record</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Union Info</relationshipLabel>
    <relationshipName>Employee_Union_Info</relationshipName>
    <type>Lookup</type>
</CustomField>