sfSandBoxCode/force-app/main/default/objects/Employee_Union__c/fields/Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate__c</fullName>
    <description>Pay Rate</description>
    <inlineHelpText>Pay Rate</inlineHelpText>
    <label>Pay Rate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>