sfSandBoxCode/force-app/main/default/objects/Employee_Union__c/fields/Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Pay_Type__c</fullName>
    <label>Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COTU Dues</fullName>
            </value>
            <value>
                <fullName>NIL</fullName>
            </value>
            <value>
                <fullName>Union Dues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>