sfSandBoxCode/force-app/main/default/objects/Employee_Union__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <description>Payee</description>
    <inlineHelpText>Payee</inlineHelpText>
    <label>Payee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>