sfSandBoxCode/force-app/main/default/objects/Employee_Union__c/fields/Unionizable_or_Non_Unionizable_Choice__c.field-meta.xml
<CustomField>
    <fullName>Unionizable_or_Non_Unionizable_Choice__c</fullName>
    <label>Unionizable or Non-Unionizable Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unionizable</fullName>
            </value>
            <value>
                <fullName>Non-Unionizable</fullName>
            </value>
            <value>
                <fullName>Unionized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>